# PicoUI

./: .gitignore  README.md  pyproject.toml  resources.py  setup.py
.github/workflows/: python-publish.yml
doc/: cheatsheet.txt
picoui/: dimensions.py  env_vars.py  icons.py  log.py  settings.py
picoui/dialogs/preferences/: base.py  helper.py  spec.py
picoui/helpers/: README.md  __init__.py  groups.py  layout.py  spinbox.py
picoui/menu/: specs.py
picoui/parser/: helper.py  service.py  spec.py  structured.py
picoui/signals/: signals_blocked.py
picoui/specs/: widgets.py
picoui/splash/: config.py  helper.py  screen.py  theme.py
picoui/tests/: test_form_label_from_spec.py  test_helpers_groups.py  test_helpers_layout.py
picoui/tooltip/: manager.py
picoui/widget/: helper.py  setters.py  type.py
